<resources>
    <string name="app_name">RentIO</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in_to_your_existing_rent_io_account">Log in to your existing Rent.io account</string>
    <string name="not_a_user_sign_up">Not a user? Sign Up.</string>
    <string name="let_s_get_started">Let\'s get Started</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="dob"> DOB (dd/mm/yyyy)</string>
    <string name="set_up_your_new_rent_io_account">Set up your new Rent.io Account</string>
    <string name="sign_up">sign up</string>
    <string name="aadhaar_no">Aadhaar No</string>
    <string name="log">logo</string>
</resources>